--- a/Конспекты/Data Science/Machine learning/Clusterization.ipynb
+++ b/Конспекты/Data Science/Machine learning/Clusterization.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "6a74f273-1a62-41b2-825e-219dc28b175a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Загрузка данных"
    ]
@@ -12,7 +16,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "d0b4770f-a199-45ed-aef3-771cadbca91c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -26,7 +34,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "afd6b987-b358-4649-bb1d-7453e956391b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -291,7 +303,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "05bfc24a-1d1c-4b09-9f88-aca5f4695b19",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -318,7 +334,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "138f1a92-0167-40d4-adbf-9add7c965cd2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -577,7 +597,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "47804c93-cf18-4166-8698-bbc3cb0b3803",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -611,7 +635,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "59c58412-9c20-4f63-becc-35aedd833ae3",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -622,7 +650,11 @@
   {
    "cell_type": "markdown",
    "id": "d49165f3-8607-4c39-a672-e6d7fc46736a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Обучение моделей"
    ]
@@ -630,7 +662,11 @@
   {
    "cell_type": "markdown",
    "id": "0771fc6f-211a-42d8-9159-9ce21e0eddac",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## AffinityPropagation"
    ]
@@ -639,7 +675,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "66e60ea7-83e9-49cc-a030-878aa516a93c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.cluster import AffinityPropagation\n",
@@ -660,7 +700,11 @@
   {
    "cell_type": "markdown",
    "id": "75890f8f-93a0-4fd2-a0e9-dbb12f043b97",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## AgglomerativeClustering"
    ]
@@ -669,7 +713,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "268f2a7c-e53c-4067-85ae-a83e16607780",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -714,7 +762,11 @@
   {
    "cell_type": "markdown",
    "id": "3770dfc9-c338-449b-af49-40b821de401a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Birch"
    ]
@@ -723,7 +775,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "2ebb1981-9dfd-457d-80e0-eb66d93f6141",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -766,7 +822,11 @@
   {
    "cell_type": "markdown",
    "id": "52777cfa-92bc-40c8-b245-d99f6824cbdf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## DBSCAN"
    ]
@@ -775,7 +835,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "09390111-234a-48e5-afcc-dc9c46b87d66",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -804,7 +868,11 @@
   {
    "cell_type": "markdown",
    "id": "53e9d9ae-432e-4174-9598-8f9aa85c009a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## KMeans"
    ]
@@ -813,7 +881,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "782bfe8f-0b96-4e4c-a5b1-3f4e71c02574",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -856,7 +928,11 @@
   {
    "cell_type": "markdown",
    "id": "25feac6b-97ad-4884-aaf9-749f6715bcff",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## BisectingKMeans"
    ]
@@ -865,17 +941,21 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "f38941cb-6199-413b-99c8-26dad1ae6a55",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "ename": "ImportError",
      "evalue": "cannot import name 'BisectingKMeans' from 'sklearn.cluster' (/home/roman/anaconda3/lib/python3.9/site-packages/sklearn/cluster/__init__.py)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [15]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcluster\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BisectingKMeans\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m adjusted_mutual_info_score\n\u001b[1;32m      4\u001b[0m model \u001b[38;5;241m=\u001b[39m BisectingKMeans(n_clusters\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m6\u001b[39m, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\u001b[38;5;241m.\u001b[39mfit(x_train)\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'BisectingKMeans' from 'sklearn.cluster' (/home/roman/anaconda3/lib/python3.9/site-packages/sklearn/cluster/__init__.py)"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mImportError\u001B[0m                               Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [15]\u001B[0m, in \u001B[0;36m<cell line: 1>\u001B[0;34m()\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msklearn\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcluster\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m BisectingKMeans\n\u001B[1;32m      2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msklearn\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmetrics\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m adjusted_mutual_info_score\n\u001B[1;32m      4\u001B[0m model \u001B[38;5;241m=\u001B[39m BisectingKMeans(n_clusters\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m6\u001B[39m, random_state\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m10\u001B[39m)\u001B[38;5;241m.\u001B[39mfit(x_train)\n",
+      "\u001B[0;31mImportError\u001B[0m: cannot import name 'BisectingKMeans' from 'sklearn.cluster' (/home/roman/anaconda3/lib/python3.9/site-packages/sklearn/cluster/__init__.py)"
      ]
     }
    ],
@@ -895,7 +975,11 @@
   {
    "cell_type": "markdown",
    "id": "9391ca1c-fef4-42b9-95c8-1525b0856e98",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## MiniBatchKMeans"
    ]
@@ -904,7 +988,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "8962e23a-bc46-4454-bbe3-0f4eb7998de8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -947,7 +1035,11 @@
   {
    "cell_type": "markdown",
    "id": "ef45e34b-71f5-494a-b92f-c7a08e3de268",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## MeanShift"
    ]
@@ -956,7 +1048,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "6478a3c8-c1ff-446b-8fbf-e9d0217642df",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1003,7 +1099,11 @@
   {
    "cell_type": "markdown",
    "id": "3f3522f5-d7e1-436a-a2f5-caf3f87c705a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## OPTICS"
    ]
@@ -1012,7 +1112,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "8c5ab302-baa0-4bda-a49d-80fead5dc213",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1042,7 +1146,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4f8fccc0-1554-4586-a3ed-5eca60012f25",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
