--- a/Конспекты/Data Science/Анализ данных/Matplotlib.ipynb
+++ b/Конспекты/Data Science/Анализ данных/Matplotlib.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a35c71a2-0e3e-44f8-b3ff-a40806fd51aa",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
