--- a/Конспекты/Data Science/Анализ данных/Графики.ipynb
+++ b/Конспекты/Data Science/Анализ данных/Графики.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "id": "6c10eb4e-92f4-4cdb-bb1d-458eebd76335",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "# Загрузка данных"
@@ -14,7 +17,11 @@
    "cell_type": "code",
    "execution_count": 169,
    "id": "303ba0bd-640d-443e-aecf-84bd5fc8348e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -261,7 +268,11 @@
   {
    "cell_type": "markdown",
    "id": "85970da0-0385-4af1-a79a-1bb3debdb5b7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Графики по типу"
    ]
@@ -269,7 +280,11 @@
   {
    "cell_type": "markdown",
    "id": "82501cd1-1358-4309-b79d-e3289e01532e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Линейные графики"
    ]
@@ -277,7 +292,11 @@
   {
    "cell_type": "markdown",
    "id": "f38f8423-d679-4015-a61d-63f7977b325e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.plot.html#matplotlib.pyplot.plot"
    ]
@@ -286,7 +305,11 @@
    "cell_type": "code",
    "execution_count": 90,
    "id": "8d903994-be1c-4695-97d8-e64b7b012cef",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -327,14 +350,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "966a60e9-9831-4756-bb1e-914be8c7c869",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "9db8cca3-51b4-4e38-9283-24e01c772cdc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "https://seaborn.pydata.org/generated/seaborn.distplot.html"
    ]
@@ -343,7 +374,11 @@
    "cell_type": "code",
    "execution_count": 60,
    "id": "22433d73-cbf0-4af9-835c-9ac006e2ea7b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -389,7 +424,11 @@
   {
    "cell_type": "markdown",
    "id": "a23ade48-8439-4ac4-a05e-0a36f31b3bb6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Диаграмма с областями"
    ]
@@ -398,7 +437,11 @@
    "cell_type": "code",
    "execution_count": 181,
    "id": "5ec4bab8-cb24-4a57-aa27-b49f1e51c6a8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -443,14 +486,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "eddcda47-afb9-479d-bdb0-841012df30bb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "f9df5599-6eeb-4a48-abc6-d9541ede6474",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Диаграмма рассеяния"
    ]
@@ -459,7 +510,11 @@
    "cell_type": "code",
    "execution_count": 104,
    "id": "0f7e33a1-bc15-4abc-94e0-3f94183c2e76",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -497,14 +552,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "254b363e-455d-4dff-835e-c8c3190b2be5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "e287c1bf-9983-483e-81ea-e8ffaa045b88",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Гистограммы"
    ]
@@ -513,7 +576,11 @@
    "cell_type": "code",
    "execution_count": 127,
    "id": "dfc17ffd-ecf1-448f-84a3-ed379fb70ef5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -549,7 +616,11 @@
   {
    "cell_type": "markdown",
    "id": "223348ea-c7fb-40a1-8026-b293fd72512d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Столбчатые диаграммы"
    ]
@@ -558,7 +629,11 @@
    "cell_type": "code",
    "execution_count": 186,
    "id": "12667d28-c3ec-436c-8d34-64a460febd29",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -604,7 +679,11 @@
    "cell_type": "code",
    "execution_count": 190,
    "id": "87427549-01f6-48be-97d2-11f022c6a65a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -645,7 +724,11 @@
    "cell_type": "code",
    "execution_count": 188,
    "id": "5d04a3bb-7ff2-4079-afb7-a89c722f094f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -688,7 +771,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b4fadca5-c6ae-4abb-9262-9551ee6e00c2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -696,14 +783,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5cfe15be-7bd1-4d0b-9d3c-4cfd34cf0109",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "d1eb8fd8-29a2-417d-baf8-15625c01553c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Диаграмма размаха (Ящик с усами)"
    ]
@@ -712,7 +807,11 @@
    "cell_type": "code",
    "execution_count": 176,
    "id": "5c1e31dc-9613-44d4-aca1-1deafcf327fc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -748,14 +847,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d2c43e33-708d-45bd-acf7-51388b287edf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "11b1808f-a0f4-4ef9-a7b5-0919a7912c39",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Контурные диаграммы"
    ]
@@ -764,7 +871,11 @@
    "cell_type": "code",
    "execution_count": 133,
    "id": "37753982-3a1f-4774-abba-d8602ca4de67",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -813,14 +924,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d4a00fb3-11e4-4b99-927f-5146418f1e2d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "e9403859-afe5-4575-b18d-f832aea3ba8e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Круговая диаграмма"
    ]
@@ -829,7 +948,11 @@
    "cell_type": "code",
    "execution_count": 148,
    "id": "5c39c072-61b2-42ac-85ab-468d0eac90c1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -866,7 +989,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "09a7cef5-0b90-496b-972b-23b934d8e5a6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -874,7 +1001,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "78edb64e-689e-457b-b635-ba67f2237f63",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -882,7 +1013,11 @@
    "cell_type": "code",
    "execution_count": 151,
    "id": "c38f6c09-c5c2-4a59-ae42-0807e72ae0ef",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -907,7 +1042,11 @@
   {
    "cell_type": "markdown",
    "id": "92ab2928-e2e1-4981-92ce-9457c90f26b8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Тепловые карты"
    ]
@@ -916,7 +1055,11 @@
    "cell_type": "code",
    "execution_count": 152,
    "id": "fb7e99c8-9d60-413b-ab6c-3b1488b0ae5f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -953,7 +1096,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "edd74f08-bbc4-470d-bbf5-6468328d52b9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -961,14 +1108,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f9acbb01-b023-4b0a-a9ac-09b3349626f4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "ab0b1147-9c39-4a5d-93ba-7a2c549ab55b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Графики по назначению"
    ]
@@ -976,7 +1131,11 @@
   {
    "cell_type": "markdown",
    "id": "968c2c61-0f39-42dd-89f0-72a79d92890f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Диаграмма корреляции"
    ]
@@ -985,7 +1144,11 @@
    "cell_type": "code",
    "execution_count": 200,
    "id": "0b9db812-52a5-40e4-8cbf-73cb2b0bebd1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1014,7 +1177,11 @@
   {
    "cell_type": "markdown",
    "id": "9d0a71cd-2120-4f33-8ff4-8b94bd377cab",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Парный график"
    ]
@@ -1023,7 +1190,11 @@
    "cell_type": "code",
    "execution_count": 201,
    "id": "f054aeca-6ce7-42b7-a496-72046a730e41",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1060,7 +1231,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7d0af57b-c3aa-48a2-af36-dccac059ab32",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -1068,7 +1243,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "73279ea2-baf3-4899-8714-df3b205470c2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -1076,7 +1255,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2daebc13-7488-4d63-8f29-bfb9115901fb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -1084,7 +1267,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "a7139811-f8bc-430a-b357-3c68a4726d80",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
