--- a/Конспекты/Языки программирования/Базы данных/SQL Конспект.ipynb
+++ b/Конспекты/Языки программирования/Базы данных/SQL Конспект.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 66,
    "id": "c8e486c8-78a4-4d5a-9f32-f6b5c822d8a5",
    "metadata": {
     "pycharm": {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 67,
    "outputs": [],
    "source": [
     "db_config = {\n",
@@ -70,13 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 68,
    "outputs": [
     {
      "data": {
       "text/plain": "3306"
      },
-     "execution_count": 41,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 69,
    "id": "8b978904-28de-44d5-852b-4d9d47d297d2",
    "metadata": {
     "pycharm": {
@@ -105,7 +105,7 @@
      "data": {
       "text/plain": "'3.37.2'"
      },
-     "execution_count": 42,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 70,
    "id": "ae231235-b897-4b38-b72d-d044845b2c17",
    "metadata": {
     "pycharm": {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 71,
    "outputs": [
     {
      "name": "stdout",
@@ -1123,6 +1123,246 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### SUM"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     age     sex  job housing saving_accounts checking_account  credit_amount  \\\n",
+      "0     41  female    1     own            rich                             250   \n",
+      "1     27  female    2     own          little           little            343   \n",
+      "2     52  female    1     own        moderate                             362   \n",
+      "3     58  female    1     own          little           little            385   \n",
+      "4     23  female    2    rent          little             rich            392   \n",
+      "..   ...     ...  ...     ...             ...              ...            ...   \n",
+      "995   68    male    3     own          little           little          14896   \n",
+      "996   21    male    2     own          little                           15653   \n",
+      "997   23    male    2     own          little         moderate          15672   \n",
+      "998   43    male    3     own          little           little          15857   \n",
+      "999   58    male    2    rent          little         moderate          15945   \n",
+      "\n",
+      "     duration              purpose  default contract_dt  client_id    cum_sum  \n",
+      "0           6                  car        0  2007-05-17        725      250.0  \n",
+      "1           6  domestic appliances        0  2007-11-11        458      593.0  \n",
+      "2           6                  car        0  2007-07-18        379      955.0  \n",
+      "3          12             radio/TV        0  2007-08-13        590     1340.0  \n",
+      "4          15            education        0  2008-06-02        111     1732.0  \n",
+      "..        ...                  ...      ...         ...        ...        ...  \n",
+      "995         6                  car        1  2008-05-09        917  2316021.0  \n",
+      "996        60             radio/TV        0  2008-04-26        637  2331674.0  \n",
+      "997        48             business        1  2007-11-30        887  2347346.0  \n",
+      "998        36      vacation/others        0  2007-05-16        818  2363203.0  \n",
+      "999        54             business        1  2007-08-04         95  2379148.0  \n",
+      "\n",
+      "[1000 rows x 13 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Роман\\AppData\\Local\\Temp\\ipykernel_17860\\1740306418.py:5: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  print(pd.read_sql(query_sql, mysql_con))\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_sql = '''SELECT credit.*,\n",
+    "SUM(credit.credit_amount) over (PARTITION BY credit.sex ORDER BY credit.credit_amount) AS cum_sum\n",
+    "FROM german_credit AS credit'''\n",
+    "\n",
+    "print(pd.read_sql(query_sql, mysql_con))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### RANK"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     age     sex  job housing saving_accounts checking_account  credit_amount  \\\n",
+      "0     32  female    3     own          little         moderate          18424   \n",
+      "1     60  female    3    free        moderate         moderate          14782   \n",
+      "2     38  female    3    free          little         moderate          12976   \n",
+      "3     44  female    3    free          little         moderate          12579   \n",
+      "4     24  female    1    rent        moderate                           11590   \n",
+      "..   ...     ...  ...     ...             ...              ...            ...   \n",
+      "995   39    male    1     own          little                             426   \n",
+      "996   38    male    2     own                         moderate            368   \n",
+      "997   45    male    1     own          little           little            339   \n",
+      "998   52    male    2     own      quite rich           little            338   \n",
+      "999   22    male    1    rent          little         moderate            276   \n",
+      "\n",
+      "     duration          purpose  default contract_dt  client_id  rnk  \n",
+      "0          48  vacation/others        1  2007-12-21        915    1  \n",
+      "1          60  vacation/others        1  2007-06-11        374    2  \n",
+      "2          18              car        1  2008-02-08        381    3  \n",
+      "3          24              car        1  2007-06-20         18    4  \n",
+      "4          48              car        1  2008-02-29        333    5  \n",
+      "..        ...              ...      ...         ...        ...  ...  \n",
+      "995         6         radio/TV        0  2008-04-24         26  686  \n",
+      "996         6         radio/TV        0  2007-06-25        493  687  \n",
+      "997        12        education        0  2007-06-23        157  688  \n",
+      "998         6         radio/TV        0  2007-07-13        177  689  \n",
+      "999         9              car        0  2007-10-08        309  690  \n",
+      "\n",
+      "[1000 rows x 13 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Роман\\AppData\\Local\\Temp\\ipykernel_17860\\4287232851.py:5: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  print(pd.read_sql(query_sql, mysql_con))\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_sql = '''SELECT credit.*,\n",
+    "rank() over (PARTITION BY credit.sex ORDER BY credit.credit_amount desc) AS rnk\n",
+    "FROM german_credit AS credit'''\n",
+    "\n",
+    "print(pd.read_sql(query_sql, mysql_con))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### ROW_NUMBER"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     age     sex  job housing saving_accounts checking_account  credit_amount  \\\n",
+      "0     32  female    3     own          little         moderate          18424   \n",
+      "1     60  female    3    free        moderate         moderate          14782   \n",
+      "2     38  female    3    free          little         moderate          12976   \n",
+      "3     44  female    3    free          little         moderate          12579   \n",
+      "4     24  female    1    rent        moderate                           11590   \n",
+      "..   ...     ...  ...     ...             ...              ...            ...   \n",
+      "995   39    male    1     own          little                             426   \n",
+      "996   38    male    2     own                         moderate            368   \n",
+      "997   45    male    1     own          little           little            339   \n",
+      "998   52    male    2     own      quite rich           little            338   \n",
+      "999   22    male    1    rent          little         moderate            276   \n",
+      "\n",
+      "     duration          purpose  default contract_dt  client_id  row_n  \n",
+      "0          48  vacation/others        1  2007-12-21        915      1  \n",
+      "1          60  vacation/others        1  2007-06-11        374      2  \n",
+      "2          18              car        1  2008-02-08        381      3  \n",
+      "3          24              car        1  2007-06-20         18      4  \n",
+      "4          48              car        1  2008-02-29        333      5  \n",
+      "..        ...              ...      ...         ...        ...    ...  \n",
+      "995         6         radio/TV        0  2008-04-24         26    686  \n",
+      "996         6         radio/TV        0  2007-06-25        493    687  \n",
+      "997        12        education        0  2007-06-23        157    688  \n",
+      "998         6         radio/TV        0  2007-07-13        177    689  \n",
+      "999         9              car        0  2007-10-08        309    690  \n",
+      "\n",
+      "[1000 rows x 13 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Роман\\AppData\\Local\\Temp\\ipykernel_17860\\3903374365.py:5: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  print(pd.read_sql(query_sql, mysql_con))\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_sql = '''SELECT credit.*,\n",
+    "row_number() over (PARTITION BY credit.sex ORDER BY credit.credit_amount desc) AS row_n\n",
+    "FROM german_credit AS credit'''\n",
+    "\n",
+    "print(pd.read_sql(query_sql, mysql_con))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
