--- a/Конспекты/Data Science/Machine learning/SVD.ipynb
+++ b/Конспекты/Data Science/Machine learning/SVD.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "60c1ff23",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# SVD преобразование"
    ]
@@ -11,7 +15,11 @@
   {
    "cell_type": "markdown",
    "id": "10f2dcff",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "SVD (Singular Value Decompozition) - это метод, который пришёл в машинное обучение из линейной алгебры. Этот метод применяется для снижения размерности так же, как PCA.\n",
     "\n",
@@ -21,7 +29,11 @@
   {
    "cell_type": "markdown",
    "id": "d51ee955",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Суть метода состоит в том, что любую прямоугольную матрицу $X$ (у нас это матрица объекты-признаки) размерности $m\\times n$ можно представить в виде произведения трёх матриц разной размерности (двух квадратных и прямоугольной в середине):\n",
     "$$\n",
@@ -40,7 +52,11 @@
   {
    "cell_type": "markdown",
    "id": "fe5ea163",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Зачем же нужно сингулярное преобразование и как применить его к задаче снижения размерности? Мы уже говорили, что матрица $S$, в центре разложения, является диагональной:\n",
     "\n",
@@ -66,7 +82,11 @@
   {
    "cell_type": "markdown",
    "id": "90960c42",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Логика обнуления диагональных элементов реализована в классе [sklearn.decomposition.TruncatedSVD](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.TruncatedSVD.html). Давайте применим его для снижения размерности, как мы применяли PCA во втором уроке этого модуля"
    ]
@@ -75,7 +95,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "0c10bb8e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -108,7 +132,11 @@
   {
    "cell_type": "markdown",
    "id": "de2502b1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Применяем снижение размерности с помощью SVD"
    ]
@@ -117,7 +145,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "cdf7665c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -147,7 +179,11 @@
   {
    "cell_type": "markdown",
    "id": "ed8801e0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Готово! Мы воспользовались алгоритмом снижения размерности TruncatedSVD и получили картинку, похожую на результат применения алгоритма PCA. Оба этих метода сильно похожи, про связь PCA и SVD можно [почитать тут](https://towardsdatascience.com/pca-and-svd-explained-with-numpy-5d13b0d2a4d8) [или тут](https://stats.stackexchange.com/questions/134282/relationship-between-svd-and-pca-how-to-use-svd-to-perform-pca/134283). Как понять какой из них выбрать для решения задачи?\n",
     "\n",
@@ -159,7 +195,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4dd1d14f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
