--- a/Конспекты/Data Science/Machine learning/t-SNE.ipynb
+++ b/Конспекты/Data Science/Machine learning/t-SNE.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "d6c612e0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Трансформация t-SNE"
    ]
@@ -11,7 +15,11 @@
   {
    "cell_type": "markdown",
    "id": "196789d8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Есть [подробная статья на хабре](https://habr.com/ru/post/267041/).\n",
     "\n",
@@ -22,7 +30,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "dca0cf02",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -118,7 +130,11 @@
   {
    "cell_type": "markdown",
    "id": "15711719",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Выполним сжатие данных, пользуясь реализацией `sklearn.manifold.TSNE`:"
    ]
@@ -127,7 +143,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "d824380c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -174,7 +194,11 @@
   {
    "cell_type": "markdown",
    "id": "3e472cd6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Готово! Визуально данные стали более разделимы."
    ]
@@ -183,7 +207,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b62e1e13",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
