--- a/Конспекты/Data Science/Deep  Learning/Keras.ipynb
+++ b/Конспекты/Data Science/Deep  Learning/Keras.ipynb
@@ -74,7 +74,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Полносвязный слой\n",
+    "## Полносвязный слой(Dense)\n",
     "Полносвязный слой в Tensorflow называется Dense и живет в tensorflow.keras.layers."
    ],
    "metadata": {
@@ -138,7 +138,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Сверточный слой\n",
+    "## Сверточный слой(Conv2D)\n",
     "\n",
     "сверточный слой находится в tf.keras.layers и называется Conv2D"
    ],
@@ -161,12 +161,13 @@
     "```\n",
     "\n",
     "\n",
-    "*   filters -- количество выходных каналов. M -- на иллюстрации выше\n",
-    "*   kernel_size -- размер фильтра (ядра). (k,k) -- на иллюстрации.\n",
-    "*   padding -- значение \"valid\" по умолчанию, означает, что свертка \"откусит\" часть входного тензора. Например, при размере фильтра 3 -- размер уменьшится на пиксель с каждой стороны, при фильтре 5 -- на два и т.д. Второе значение -- \"same\", автоматически подберет паддинг из нулей для того, чтобы размер не изменился\n",
-    "*   activation -- знакомая нам активация (например, \"relu\"). Применяется сразу после свертки и добавления вектора смещения поэлементно\n",
-    "*   use_bias -- использовать ли смещение после свертки. Добавляет число к каждому из выходных каналов\n",
-    "*   kernel_initializer, bias_initializer -- инициализаторы ядра и смещения, аналогично Dense слою\n",
+    "* filters -- количество выходных каналов. M -- на иллюстрации выше\n",
+    "* kernel_size -- размер фильтра (ядра). (k,k) -- на иллюстрации.\n",
+    "* strides -- Целое число или кортеж/список из 2-х целых чисел, задающих шаги свертки по высоте и ширине.\n",
+    "* padding -- значение \"valid\" по умолчанию, означает, что свертка \"откусит\" часть входного тензора. Например, при размере фильтра 3 -- размер уменьшится на пиксель с каждой стороны, при фильтре 5 -- на два и т.д. Второе значение -- \"same\", автоматически подберет паддинг из нулей для того, чтобы размер не изменился\n",
+    "* activation -- знакомая нам активация (например, \"relu\"). Применяется сразу после свертки и добавления вектора смещения поэлементно\n",
+    "* use_bias -- использовать ли смещение после свертки. Добавляет число к каждому из выходных каналов\n",
+    "* kernel_initializer, bias_initializer -- инициализаторы ядра и смещения, аналогично Dense слою\n",
     "\n",
     "Обратите внимаение, мы не указали количество входных каналов. Как и в случае полносвязного слоя, Keras вычислит это автоматически."
    ],
@@ -279,6 +280,92 @@
     "\n",
     "Он просто считает среднее по каждому из каналов. И мы получим вектор! (точнее тензор размера 1 x 1 x n_channels).\n",
     "<img src=\"https://peltarion.com/static/global_average_pooling_a.png\" width=\"600\">"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## MaxPooling2D\n",
+    "\n",
+    "Операция максимальной подвыборки(субдискретизации) для пространственных данных."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Он имеет следующие параметры (показаны лишь самые основные):\n",
+    "\n",
+    "```\n",
+    "keras.layers.MaxPooling2D(pool_size=(2, 2), strides=None, padding=’valid’, data_format=None)\n",
+    "```\n",
+    "\n",
+    "* pool_size: целое число или кортеж из 2-х целых чисел, факторы, по которым следует уменьшать масштаб (вертикальный, горизонтальный). (2, 2) уменьшит входное значение в обоих пространственных измерениях наполовину. Если указано только одно целое число, то для обоих измерений будет использована одна и та же длина окна.\n",
+    "* strides: Целое число, кортеж из 2 целых чисел или None. Значения шагов. Если None, то по умолчанию будет использовано значение pool_size.\n",
+    "* padding: значение \"valid\" по умолчанию, означает, что свертка \"откусит\" часть входного тензора. Например, при размере фильтра 3 -- размер уменьшится на пиксель с каждой стороны, при фильтре 5 -- на два и т.д.  Второе значение -- \"same\", автоматически подберет паддинг из нулей для того, чтобы размер не изменился\n",
+    "* data_format: Строка, одна из channels_last (по умолчанию) или channels_first. Порядок следования размеров на входах.\n",
+    "    channels_last соответствует входам с формой (batch, height, width, channels).\n",
+    "    channels_first соответствует входам с формой (batch, channels, height, width).\n",
+    "    По умолчанию значением параметра image_data_format, найденным в вашем конфигурационном файле Keras, является ~/.keras/keras.json. Если вы никогда не устанавливали его, то это будет «channels_last».\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Flatten"
    ],
    "metadata": {
     "collapsed": false,
